# MotionExtraction-Posy

./: .gitignore  CMakeLists.txt  LICENSE
src/: Main.cpp  MotionDetect.cpp  MotionDetect.h  MotionExtraction.cpp  MotionExtraction.h
